--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.2",
+    "moment": "^2.29.4",
     "ng-zorro-antd": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
