--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/component": "^16.1.0",
+    "@ngrx/component-store": "^16.1.0",
+    "@ngrx/effects": "^16.1.0",
+    "@ngrx/router-store": "^16.1.0",
+    "@ngrx/store": "^16.1.0",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.2",
     "moment": "^2.29.4",
