--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^16.1.0",
     "@ngrx/router-store": "^16.1.0",
     "@ngrx/store": "^16.1.0",
+    "@ngrx/store-devtools": "^16.1.0",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.2",
     "moment": "^2.29.4",
