--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^16.1.0",
     "@ngrx/store-devtools": "^16.1.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.2",
     "crypto-js": "^4.1.1",
     "firebase": "^9.22.2",
     "moment": "^2.29.4",
